remove int check from packetgen for len option; adjusted ServerConfService.get() to be without default value to enforce server.conf; further fixup on v2 net core handling; add bridging support of packet registration for v2 and old; refactor chat-server to use new packet interface (v2); ton of client messages refactored to schema driven packet declaration